# zstd-jsonl-filter

./: Cargo.toml  LICENSE  README.md  build.rs  config.json  config.toml
.github/workflows/: release.yml  rust.yml
src/: main.rs
