[package]
name = "zstd-jsonl-filter"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.8"
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
zstd = "0.13.2"

[build-dependencies]
winresource = "0.1.17"
